# JakeGenV2

./: .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json
api/: render.ts
api/latex/: render.ts  template.tex
api/types/: resume.ts
resume-typst/: .gitignore  README.md  SETUP_NOTES.md  package-lock.json  package.json  vercel.json  vite.config.ts
resume-typst/api/: render.ts
resume-typst/api/latex/: escape.ts
resume-typst/crates/typst_engine/: Cargo.toml
resume-typst/crates/typst_engine/src/: lib.rs  utils.rs
resume-typst/src/: App.tsx  styles.css
resume-typst/src/data/: defaultResume.ts
resume-typst/src/latex/: render-client.ts
resume-typst/src/lib/: latex-compiler.ts
resume-typst/src/model/: defaultResume.ts  types.ts  validate.ts
resume-typst/src/typst/: render.ts  template.typ
resume-typst/src/ui/: Form.tsx  Preview.tsx  Toolbar.tsx
resume-typst/src/ui/sections/: EducationSection.tsx  ExperienceSection.tsx  FormattingSection.tsx  HeaderSection.tsx  ProjectsSection.tsx  SkillsSection.tsx
src/: styles.css  vite-env.d.ts
src/lib/: api.ts
src/ui/: Preview.tsx  Toolbar.tsx
src/ui/sections/: ExperienceSection.tsx  SkillsSection.tsx
