[package]
name = "typst_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
typst = "0.11"
typst-pdf = "0.11"
typst-assets = { version = "0.11", features = ["fonts"] }
comemo = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[profile.release]
opt-level = "s"
lto = true
